Fixed bug #64770 stream_select() fails with pipes

returned by proc_open() on Windows x64